--- a/sensor-server/views/layout.ejs
+++ b/sensor-server/views/layout.ejs
@@ -29,7 +29,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/app.css">
     <!--STYLES END-->
   </head>
 
@@ -89,6 +89,9 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/app/Main.js"></script>
+    <script src="/js/app/Sensor/SensorController.js"></script>
+    <script src="/js/app/Sensors/SensorsController.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
